--- a/Smashtag/Smashtag/Base.lproj/Main.storyboard
+++ b/Smashtag/Smashtag/Base.lproj/Main.storyboard
@@ -201,15 +201,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Gq-Ox-KQ2">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="9Gq-Ox-KQ2" firstAttribute="top" secondItem="thu-QF-G2l" secondAttribute="top" id="TN7-0e-EzX"/>
-                            <constraint firstItem="9Gq-Ox-KQ2" firstAttribute="leading" secondItem="thu-QF-G2l" secondAttribute="leading" id="r6n-ms-oJV"/>
-                            <constraint firstAttribute="bottom" secondItem="9Gq-Ox-KQ2" secondAttribute="bottom" id="rBt-q5-SQ5"/>
-                            <constraint firstAttribute="trailing" secondItem="9Gq-Ox-KQ2" secondAttribute="trailing" id="xFG-Jc-qUy"/>
+                            <constraint firstItem="9Gq-Ox-KQ2" firstAttribute="leading" secondItem="thu-QF-G2l" secondAttribute="leading" id="Gfw-uy-dXw"/>
+                            <constraint firstAttribute="trailing" secondItem="9Gq-Ox-KQ2" secondAttribute="trailing" id="WwM-od-Ida"/>
+                            <constraint firstItem="9Gq-Ox-KQ2" firstAttribute="top" secondItem="ksh-zV-Wyw" secondAttribute="bottom" id="oAW-HN-Kcf"/>
+                            <constraint firstItem="9Gq-Ox-KQ2" firstAttribute="bottom" secondItem="zy8-I5-OVj" secondAttribute="top" id="w4C-9R-Irs"/>
                         </constraints>
                     </view>
                     <connections>
