--- a/Smashtag/Smashtag/Base.lproj/Main.storyboard
+++ b/Smashtag/Smashtag/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
     </dependencies>
     <scenes>
         <!--Tweet Table View Controller-->
@@ -91,11 +92,18 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="PwY-6Y-kf2">
-                        <barButtonItem key="rightBarButtonItem" title="🔙" id="5dU-tP-kxR">
-                            <connections>
-                                <action selector="backToRoot:" destination="hGM-vP-8rx" id="8nz-eK-zJ2"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem enabled="NO" systemItem="organize" id="Wro-vL-XGG">
+                                <connections>
+                                    <segue destination="6Xv-na-sFb" kind="show" identifier="Show Images" id="mdA-ql-Hfa"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="🔙" id="5dU-tP-kxR">
+                                <connections>
+                                    <action selector="backToRoot:" destination="hGM-vP-8rx" id="8nz-eK-zJ2"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="VyN-ai-pu8">
                         <autoresizingMask key="autoresizingMask"/>
@@ -114,6 +122,7 @@
                     <connections>
                         <outlet property="backToRootOutlet" destination="5dU-tP-kxR" id="837-ne-yYO"/>
                         <outlet property="searchTextField" destination="puW-wk-gUm" id="UjK-8O-nuh"/>
+                        <outlet property="showImagesBurron" destination="Wro-vL-XGG" id="5J4-tW-TeQ"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JiC-Fd-D3P" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -134,14 +143,25 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="0Hm-Pz-bo7">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Image Cell" id="0Hm-Pz-bo7" customClass="TweetImageCollectionViewCell" customModule="Smashtag" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VOs-gl-oGi">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        </imageView>
+                                    </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="VOs-gl-oGi" secondAttribute="bottom" id="9Om-Dw-DfR"/>
+                                    <constraint firstItem="VOs-gl-oGi" firstAttribute="leading" secondItem="0Hm-Pz-bo7" secondAttribute="leading" id="ccV-bM-Dr3"/>
+                                    <constraint firstAttribute="trailing" secondItem="VOs-gl-oGi" secondAttribute="trailing" id="fCP-KP-1jq"/>
+                                    <constraint firstItem="VOs-gl-oGi" firstAttribute="top" secondItem="0Hm-Pz-bo7" secondAttribute="top" id="gMU-dn-Qab"/>
+                                </constraints>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -153,7 +173,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kp8-30-2Tb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2175" y="2502"/>
+            <point key="canvasLocation" x="4331" y="867"/>
         </scene>
         <!--Mentions-->
         <scene sceneID="bnC-hn-oaM">
@@ -237,7 +257,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gjg-OZ-FX1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4289" y="77"/>
+            <point key="canvasLocation" x="4331" y="81"/>
         </scene>
         <!--WebUI View Controller-->
         <scene sceneID="GBS-Mc-eKm">
@@ -295,7 +315,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uv9-Fq-R0V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5159" y="-377"/>
+            <point key="canvasLocation" x="5159" y="-305"/>
         </scene>
         <!--Media View Controller-->
         <scene sceneID="nmX-Cw-O2L">
@@ -309,7 +329,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Gq-Ox-KQ2">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Gq-Ox-KQ2">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                             </scrollView>
                         </subviews>
@@ -405,7 +425,6 @@
                     <connections>
                         <segue destination="NFN-IH-kT2" kind="relationship" relationship="viewControllers" id="Fze-ql-q7x"/>
                         <segue destination="6Uw-X6-2Y9" kind="relationship" relationship="viewControllers" id="MsN-Lm-tWe"/>
-                        <segue destination="6Xv-na-sFb" kind="relationship" relationship="viewControllers" id="ATf-1O-av6"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2TJ-5b-atN" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -433,6 +452,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="ijS-5p-ues"/>
+        <segue reference="l2t-gW-6e7"/>
     </inferredMetricsTieBreakers>
 </document>
